Convert #f6f9fc to RGB

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   --c-ring: #0066cc;
   --c-grey: #a1a1a6;
   --c-heat: #fa124f;
-  --c-glass: #f6f9fc;
+  --c-glass: rgb(246, 249, 255);
   --c-ghost: #ebfff0;
   --c-show: #fce8e6;
   --c-blue: #0071e3;
