Replace API to load the facts

--- a/src/pages/Profile/Expert/Expert.css
+++ b/src/pages/Profile/Expert/Expert.css
@@ -112,7 +112,7 @@ button[aria-disabled='true'] {
 }
 
 .danger {
-  margin-top: var(--s-unit);
+  margin-top: var(--s-line);
 }
 
 .danger button {
