--- a/src/components/Field/Field.css
+++ b/src/components/Field/Field.css
@@ -8,9 +8,9 @@
 }
 
 .form-action {
-  background-color: var(--c-action);
   border-radius: 1rem;
-  border: 1px solid var(--c-active);
+  border: 1px solid var(--c-action);
+  transition: background-color 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .form-label {
