--- a/src/index.css
+++ b/src/index.css
@@ -296,10 +296,6 @@ a:focus-visible {
   border-bottom: 1px solid var(--c-active);
 }
 
-.tab {
-  gap: 0.2rem;
-}
-
 .tab.active {
   transform: scale(1.16);
   color: var(--c-dark);
@@ -372,7 +368,7 @@ a:focus-visible {
 
   .dock {
     border-top: 1px solid var(--c-active);
-    padding: var(--s-line) 1.6rem 1.8rem;
+    padding: var(--s-line) 1.6rem var(--s-medium);
   }
 
   .title {
