Bring display P3 color gamut

--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,21 @@
 :root {
-  --c-black: #1c1c1e;
-  --c-white: #fff;
-  --c-dark: #000;
-  --c-active: rgba(118, 118, 128, 0.12);
-  --c-surface: #6e6e73;
-  --c-primary: #f7f7f9;
-  --c-action: rgba(118, 118, 128, 0.24);
-  --c-depth: rgba(245, 245, 247, 0.6);
-  --c-ring: #0066cc;
-  --c-grey: #a1a1a6;
-  --c-heat: #fa124f;
-  --c-glass: rgb(246, 249, 255);
-  --c-ghost: #ebfff0;
-  --c-show: #fce8e6;
-  --c-blue: #0071e3;
-  --c-energy: #f2a33c;
-  --c-alice: #fef6d6;
+  --c-black: color(display-p3 0.11 0.11 0.117);
+  --c-white: color(display-p3 1 1 1);
+  --c-dark: color(display-p3 0 0 0);
+  --c-active: color(display-p3 0.463 0.463 0.499 / 0.12);
+  --c-surface: color(display-p3 0.431 0.431 0.449);
+  --c-primary: color(display-p3 0.969 0.969 0.976);
+  --c-action: color(display-p3 0.463 0.463 0.499 / 0.24);
+  --c-depth: color(display-p3 0.961 0.961 0.968 / 0.6);
+  --c-ring: color(display-p3 0.166 0.394 0.773);
+  --c-grey: color(display-p3 0.631 0.631 0.649);
+  --c-heat: color(display-p3 0.9 0.214 0.328);
+  --c-glass: color(display-p3 0.967 0.976 0.998);
+  --c-ghost: color(display-p3 0.936 0.998 0.945);
+  --c-show: color(display-p3 0.975 0.913 0.904);
+  --c-blue: color(display-p3 0.187 0.436 0.86);
+  --c-energy: color(display-p3 0.904 0.653 0.319);
+  --c-alice: color(display-p3 0.991 0.966 0.852);
   --s-line: 0.6rem;
   --s-unit: 0.8rem;
   --s-safe: 1.2rem;
