--- a/src/components/DialogContent/DialogContent.css
+++ b/src/components/DialogContent/DialogContent.css
@@ -1,6 +1,6 @@
 :root {
-  --c-backdrop: rgba(0, 0, 0, 0.4);
-  --c-elevation: rgba(255, 255, 255, 0.86);
+  --c-backdrop: color(display-p3 0 0 0 / 0.4);
+  --c-elevation: color(display-p3 1 1 1 / 0.84);
   --p-spec: blur(8px);
   --s-modal: 96vw;
 }
