--- a/src/pages/Relax/Breathe.css
+++ b/src/pages/Relax/Breathe.css
@@ -1,7 +1,7 @@
 :root {
   --s-petal: 12.5rem;
   --s-inhale: 4s;
-  --c-even: #87e3e1;
+  --c-even: color(display-p3 0.652 0.825 0.937);
 }
 
 .breathe {
