Check vite 4.4 on login (#19)
* Package Maintenance

* Integrate login flow

* Add negative margin for sign in link

* Add border-radius for ornament on desktop

* Create shared styles

* Add error icon to display message

* Copy paste sign up page

* Defining primary keys

* Update table queries to DB

* Move DB to services

* Implement delete an account flow

* Add link to config

* Implement simple isAuth

* Create private route

* Drop database in case of migration or corruption

--- a/src/components/DialogContent/DialogContent.css
+++ b/src/components/DialogContent/DialogContent.css
@@ -41,6 +41,11 @@
   height: 100%;
 }
 
+.scrollable {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
 @keyframes alert-enter {
   0% {
     opacity: 0.01;
@@ -53,7 +58,7 @@
   }
 }
 
-@media screen and (max-width: 1032px) {
+@media screen and (max-width: 1052px) {
   .modal {
     overflow-y: auto;
   }
@@ -62,5 +67,9 @@
 @media screen and (max-width: 768px) {
   .alert {
     max-width: var(--s-modal);
+  }
+
+  .scrollable {
+    min-height: 14vh;
   }
 }
