--- a/src/pages/Profile/Expert/Expert.css
+++ b/src/pages/Profile/Expert/Expert.css
@@ -91,6 +91,10 @@ button[aria-disabled='true'] {
   font-weight: bold;
 }
 
+.danger-grow > * {
+  flex-grow: 1;
+}
+
 @media screen and (max-width: 1052px) {
   .ornament {
     border-radius: 0;
