--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -14,6 +14,16 @@
   grid-row: span 2;
 }
 
+.card-text {
+  font-size: 4.8rem;
+  gap: 0.4rem;
+  align-items: baseline;
+}
+
+.accent {
+  color: var(--c-energy);
+}
+
 @media screen and (max-width: 1052px) {
   .os-grid {
     grid-template-columns: repeat(4, 1fr);
