--- a/src/index.css
+++ b/src/index.css
@@ -87,9 +87,8 @@ button {
 a,
 button {
   will-change: transform;
-  transition: filter 0.25s,
-    transform 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275),
-    background-color 0.5s cubic-bezier(0.28, 0.11, 0.32, 1),
+  transition: transform 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275),
+    background-color 0.4s cubic-bezier(0.28, 0.11, 0.32, 1),
     outline-offset 0.2s linear;
 }
 
@@ -114,7 +113,7 @@ a:focus-visible {
 .app,
 .dock {
   max-width: 140rem;
-  transition: transform 0.5s cubic-bezier(0.32, 0.72, 0, 1);
+  transition: transform 0.4s cubic-bezier(0.32, 0.72, 0, 1);
 }
 
 .content-full {
@@ -179,7 +178,7 @@ a:focus-visible {
 }
 
 .rounded {
-  border-radius: var(--s-medium);
+  border-radius: 1.8rem;
 }
 
 .view {
@@ -306,7 +305,7 @@ a:focus-visible {
 }
 
 .panel {
-  padding: 0.1rem var(--s-medium);
+  padding: 0.2rem var(--s-medium);
 }
 
 .depth {
