--- a/src/index.css
+++ b/src/index.css
@@ -156,6 +156,12 @@ a:focus-visible {
   text-transform: capitalize;
 }
 
+.card-text {
+  font-size: 4.8rem;
+  gap: 0.4rem;
+  align-items: baseline;
+}
+
 .term,
 .concise {
   font-size: 1.6rem;
@@ -272,6 +278,10 @@ a:focus-visible {
 
 .card-sup {
   color: var(--c-lamp);
+}
+
+.accent {
+  color: var(--c-energy);
 }
 
 .shape {
@@ -421,6 +431,8 @@ button[aria-disabled='true'] {
 
   .subtitle {
     font-size: 2.4rem;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 
   .card-sub {
@@ -429,6 +441,10 @@ button[aria-disabled='true'] {
 
   .tab-link {
     display: block;
+  }
+
+  .os {
+    overflow: hidden;
   }
 }
 
